# CW4

./: README.md  main.py  pyproject.toml  requirements.txt
data/: vacancies.json
src/: hh_api.py  json_saver.py  json_worker.py  parser.py  user_interactive.py  utils.py  vacancy.py
tests/: test_user_interaction.py
