[tool.poetry]
name = "CW4"
version = "0.1.0"
description = ""
authors = ["VsevolodLunev"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
appnope = "^0.1.4"
asttokens = "^2.4.1"
attrs = "^23.2.0"
backcall = "^0.2.0"
requests = "2.32.3"
colorama = "0.4.6"
coverage = "7.6.0"
pytest = "8.3.1"
poetry-core = "^1.9.0"
path = "^16.14.0"
abspath = "^0.1.0"
jason = "^0.1.7"
response = "^0.5.0"
yesno = "^0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
